--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 
     <title>AXA - Réinventons notre métier</title>
   </head>
   <body>
 
     <header>
-      <!-- <label for="menu-toggler" class="show_on_mobile menu-toggler__label" aria-hidden="true">
-        <span class="menu-toggler__label__visual">
-          <span></span>
-          <span></span>
-          <span></span>
-        </span>
-      </label>       -->
-      <img class="show_on_mobile" src="assets/images/burger_menu.png" alt="Menu burger">
+
+      <button type="button" name="button">
+        <img class="show_on_mobile" src="assets/images/burger_menu.png" alt="Menu burger">
+      </button>
+
       <img src="assets/images/logo_axa.jpg" alt="Logo AXA">
       <div>
         <span class="hide_on_mobile">regards sur
@@ -34,51 +31,78 @@
         <img class="home_desktop" src="assets/images/image_home_mobile.png" alt="Image d'accueil grande taille">
       </picture>
 
-      <!-- <img class="show_on_mobile home_mobile" src="assets/images/image_home_mobile.png" alt="Image d'accueil taille mobile"> --> -->
-
       <article class="polygonbox">
 
-        <svg
-           class="polygons"
-           xmlns="http://www.w3.org/2000/svg"
-           xmlns:xlink="http://www.w3.org/1999/xlink"
-           width="323.046px" height="280.046px">
-          <path fill-rule="evenodd"  stroke="rgb(255, 255, 255)" stroke-width="2.031px" stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0.251" fill="rgb(41, 41, 41)"
-           d="M81.156,278.021 L1.024,139.677 L80.885,1.177 L240.877,1.021 L321.009,139.365 L241.148,277.865 L81.156,278.021 Z"/>
-      </svg>
+        <a
+        href="#"
+        class="polygons polygon1"
+        >
+          <svg
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 218 252"
+          >
+            <path
+            fill-rule="evenodd"
+            transform="translate(-476.5 -250.5)"
+            d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"
+            />
+          </svg>
+        </a>
 
-        <svg
-           class="polygons"
-           xmlns="http://www.w3.org/2000/svg"
-           xmlns:xlink="http://www.w3.org/1999/xlink"
-           width="323.046px" height="280.046px">
-          <path fill-rule="evenodd"  stroke="rgb(255, 255, 255)" stroke-width="2.031px" stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0.251" fill="rgb(41, 41, 41)"
-           d="M81.156,278.021 L1.024,139.677 L80.885,1.177 L240.877,1.021 L321.009,139.365 L241.148,277.865 L81.156,278.021 Z"/>
-      </svg>
+        <a
+        href="#"
+        class="polygons polygon2"
+        >
+          <svg
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 218 252"
+          >
+            <path
+            fill-rule="evenodd"
+            transform="translate(-476.5 -250.5)"
+            d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"
+            />
+          </svg>
+        </a>
 
-        <svg
-           class="polygons"
-           xmlns="http://www.w3.org/2000/svg"
-           xmlns:xlink="http://www.w3.org/1999/xlink"
-           width="323.046px" height="280.046px">
-          <path fill-rule="evenodd"  stroke="rgb(255, 255, 255)" stroke-width="2.031px" stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0.251" fill="rgb(41, 41, 41)"
-           d="M81.156,278.021 L1.024,139.677 L80.885,1.177 L240.877,1.021 L321.009,139.365 L241.148,277.865 L81.156,278.021 Z"/>
-      </svg>
+        <a
+        href="#"
+        class="polygons polygon3"
+        >
+          <svg
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 218 252"
+          >
+            <path
+            fill-rule="evenodd"
+            transform="translate(-476.5 -250.5)"
+            d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"
+            />
+          </svg>
+        </a>
 
-        <svg
-           class="polygons"
-           xmlns="http://www.w3.org/2000/svg"
-           xmlns:xlink="http://www.w3.org/1999/xlink"
-           width="323.046px" height="280.046px">
-          <path fill-rule="evenodd"  stroke="rgb(255, 255, 255)" stroke-width="2.031px" stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0.251" fill="rgb(41, 41, 41)"
-           d="M81.156,278.021 L1.024,139.677 L80.885,1.177 L240.877,1.021 L321.009,139.365 L241.148,277.865 L81.156,278.021 Z"/>
-      </svg>
+        <a
+        href="#"
+        class="polygons polygon4"
+        >
+          <svg
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 218 252"
+          >
+            <path
+            fill-rule="evenodd"
+            transform="translate(-476.5 -250.5)"
+            d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"
+            />
+          </svg>
+        </a>
 
 
-        <span>mot du président</span>
-        <span>engagés pour mieux protéger</span>
-        <span>stratégie AmbitionAxa</span>
-        <span>chiffres clés</span>
+
 
       </article>
 
