Now the polygons are properly placed and animated

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         href="#"
         class="polygons polygon1"
         >
+          <div>
+            mot du président
+            <img class="show_on_mobile" src="assets/images/icon_plus_sm.png" alt="Icone plus">
+          </div>
           <svg
           xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -54,6 +58,10 @@
         href="#"
         class="polygons polygon2"
         >
+          <div>
+            engagés pour mieux protéger
+            <img class="show_on_mobile" src="assets/images/icon_plus_sm.png" alt="Icone plus">
+          </div>
           <svg
           xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -71,6 +79,10 @@
         href="#"
         class="polygons polygon3"
         >
+          <div>
+            stratégie Ambition AXA
+            <img class="show_on_mobile" src="assets/images/icon_plus_sm.png" alt="Icone plus">
+          </div>
           <svg
           xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -88,6 +100,10 @@
         href="#"
         class="polygons polygon4"
         >
+          <div>
+            chiffres clés
+            <img class="show_on_mobile" src="assets/images/icon_plus_sm.png" alt="Icone plus">
+          </div>
           <svg
           xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink"
