Now the polygons are fully responsive

--- a/index.html
+++ b/index.html
@@ -35,13 +35,19 @@
     <main>
 
       <section>
-
-          <article class="hide_on_mobile">
-            <p>protéger</p>
-            <p>accompagner</p>
-            <p>innover</p>
-
-          </article>
+        <nav class="hide_on_mobile">
+          <ul>
+            <li>
+              protéger
+            </li>
+            <li>
+              accompagner
+            </li>
+            <li>
+              innover
+            </li>
+          </ul>
+        </nav>
 
           <article class="polygonbox">
 
@@ -114,6 +120,54 @@
                   transform="translate(-476.5 -250.5)"
                   d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
               </svg>
+            </a>
+
+
+            <a href="#" class="polygons polygon5 hide_on_mobile_and_tablets">
+              <div>
+                histoire vécues
+                <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
+              </div>
+              <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 218 252">
+              <path
+              fill-rule="evenodd"
+              transform="translate(-476.5 -250.5)"
+              d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
+              </svg>
+            </a>
+
+            <a href="#" class="polygons polygon6 hide_on_mobile_and_tablets">
+              <div>
+                initiatives marquantes
+                <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
+              </div>
+              <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 218 252">
+              <path
+              fill-rule="evenodd"
+              transform="translate(-476.5 -250.5)"
+              d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
+              </svg>
+            </a>
+            <a href="#" class="polygons polygon7 hide_on_mobile_and_tablets">
+              <div>
+                documents
+                <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
+              </div>
+              <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 218 252">
+              <path
+              fill-rule="evenodd"
+              transform="translate(-476.5 -250.5)"
+              d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
+            </svg>
             </a>
 
 
