--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <p>
         En poursuivant votre navigation sur ce site, vous acceptez l'utilisation de Cookies pour réaliser des statistiques de visites et vous proposer du contenu ciblé.
       </p>
-      <img id="closing_cross" src="assets/images/icon_close.png" alt="Icone de fermeture du bandeau">
+      <button type="button" name="button">
+        <img id="closing_cross" src="assets/images/icon_close.png" alt="Icone de fermeture du bandeau">
+      </button>
     </div>
 
     <header>
